cmake_minimum_required(VERSION 3.10)

project(predixy)

set(CMAKE_CXX_STANDARD 11)
set(SRCS)
set(HS)
set(BS)

add_definitions(-D_EPOLL_)
add_definitions(-D_PREDIXY_BACKTRACE_)

macro(add_src file)    
    list(APPEND SRCS src/${file}.cpp)    
    list(APPEND HS ${CMAKE_CURRENT_SOURCE_DIR}/src/${file}.h)
endmacro(add_src file)

macro(add_header file)    
    list(APPEND HS ${CMAKE_CURRENT_SOURCE_DIR}/src/${file}.h)
endmacro(add_header file)

add_src(AcceptConnection)
add_src(AcceptSocket)
add_src(Alloc)
add_src(Auth)
add_src(Buffer)
add_src(ClusterNodesParser)
add_src(ClusterServerPool)
add_src(Command)
add_src(Conf)
add_src(ConfParser)
add_src(Connection)
add_src(ConnectConnection)
add_src(ConnectConnectionPool)
add_src(ConnectSocket)
add_src(Crc16)
add_src(DC)
add_src(Distribution)
add_src(Enums)
add_src(EpollMultiplexor)
add_src(Handler)
add_src(HashFunc)
add_src(LatencyMonitor)
add_src(ListenSocket)
add_src(LogFileSink)
add_src(Logger)
add_src(Proxy)
add_src(Reply)
add_src(Request)
add_src(RequestParser)
add_src(Response)
add_src(ResponseParser)
add_src(Server)
add_src(ServerGroup)
add_src(ServerPool)
add_src(Socket)
add_src(StandaloneServerPool)
add_src(Subscribe)
add_src(Timer)

add_header(Common)
add_header(Predixy)
add_header(Sync)
add_header(ID)
add_header(IOVec)
add_header(List)
add_header(Deque)
add_header(Util)
add_header(String)
add_header(Stats)
add_header(Exception)
add_header(Multiplexor)
add_header(Transaction)

add_library(predixy SHARED ${SRCS})
list(APPEND BS ${CMAKE_BINARY_DIR}/libpredixy.so ${CMAKE_BINARY_DIR}/libpredixy.a)

install(FILES ${HS} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/predixy/")
install(FILES ${BS} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/")
